--- a/samples/Mvc.LocalizationSample.Web/Resources/Models.Product.fr.resx
+++ b/samples/Mvc.LocalizationSample.Web/Resources/Models.Product.fr.resx
@@ -117,8 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="InventoryNotEqual" xml:space="preserve">
-    <value>French inventory can't be equal to {0}</value>
+  <data name="MinLengthSix" xml:space="preserve">
+    <value>description doit être d'au moins 6 caractères</value>
   </data>
   <data name="ProductName" xml:space="preserve">
     <value>Nom du produit est invalide</value>
